--- a/style.css
+++ b/style.css
@@ -207,6 +207,12 @@ h2 {
   padding: 6rem 0;
 }
 
+@media screen and (max-width: 600px) {
+  .content-section {
+    padding: 3rem 0;
+  }
+}
+
 .decorative-letter {
   font-family: "Evangelie", sans-serif;
   font-size: 4em;
@@ -388,6 +394,7 @@ h2 {
 
 @media screen and (max-width: 710px) {
   .toronto__img {
+    padding-top: 2rem;
     max-width: 500px;
     width: 100%;
   }
@@ -471,6 +478,7 @@ h2 {
 
 @media screen and (max-width: 710px) {
   .ukrainer__img {
+    padding-top: 2rem;
     max-width: 500px;
     width: 100%;
   }
@@ -499,6 +507,15 @@ h2 {
           align-items: center;
 }
 
+@media screen and (max-width: 600px) {
+  .bihus {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
 .bihus__text {
   max-width: 350px;
   width: 100%;
@@ -512,6 +529,14 @@ h2 {
   overflow: hidden;
   max-height: 450px;
   height: 100%;
+}
+
+@media screen and (max-width: 600px) {
+  .bihus__swiper {
+    padding-top: 2rem;
+    max-width: 100%;
+    margin: 0;
+  }
 }
 
 .bihus__swiper img {
@@ -547,6 +572,15 @@ h2 {
   display: flex;
 }
 
+@media screen and (max-width: 600px) {
+  .shevchenko__wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
 .shevchenko__info {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -555,8 +589,9 @@ h2 {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-flex: 0;
       -ms-flex: 0 0 50%;
           flex: 0 0 50%;
@@ -566,6 +601,7 @@ h2 {
 .shevchenko__info h2 {
   width: 100%;
   text-align: center;
+  margin-bottom: 1rem;
 }
 
 .shevchenko__img {
@@ -575,6 +611,15 @@ h2 {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 50%;
           flex: 0 0 50%;
+}
+
+@media screen and (max-width: 600px) {
+  .shevchenko__img {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1;
+            flex: 1 1;
+    margin-top: 2rem;
+  }
 }
 
 .shevchenko__img img {
@@ -591,6 +636,15 @@ h2 {
   display: flex;
 }
 
+@media screen and (max-width: 600px) {
+  .history__wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+}
+
 .history__info {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -599,8 +653,9 @@ h2 {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-flex: 0;
       -ms-flex: 0 0 50%;
           flex: 0 0 50%;
@@ -610,6 +665,7 @@ h2 {
 .history__info h2 {
   width: 100%;
   text-align: center;
+  margin-bottom: 1rem;
 }
 
 .history__img {
@@ -619,6 +675,12 @@ h2 {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 50%;
           flex: 0 0 50%;
+}
+
+@media screen and (max-width: 600px) {
+  .history__img {
+    margin-top: 2rem;
+  }
 }
 
 .history__img img {
@@ -637,6 +699,14 @@ h2 {
   height: 100%;
 }
 
+@media screen and (max-width: 600px) {
+  .sternenko__swiper {
+    max-width: 100%;
+    margin: 0;
+    padding-top: 2rem;
+  }
+}
+
 .sternenko__swiper img {
   height: auto;
   -o-object-fit: cover;
@@ -652,6 +722,15 @@ h2 {
   display: flex;
 }
 
+@media screen and (max-width: 600px) {
+  .sternenko__wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+}
+
 .sternenko__info {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -660,8 +739,9 @@ h2 {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-flex: 0;
       -ms-flex: 0 0 40%;
           flex: 0 0 40%;
@@ -671,6 +751,7 @@ h2 {
 .sternenko__info h2 {
   width: 100%;
   text-align: center;
+  margin-bottom: 1rem;
 }
 
 .ragulivna__wrapper {
@@ -678,6 +759,15 @@ h2 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+@media screen and (max-width: 600px) {
+  .ragulivna__wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 
 .ragulivna__info {
@@ -688,8 +778,9 @@ h2 {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-flex: 0;
       -ms-flex: 0 0 40%;
           flex: 0 0 40%;
@@ -699,6 +790,7 @@ h2 {
 .ragulivna__info h2 {
   width: 100%;
   text-align: center;
+  margin-bottom: 1rem;
 }
 
 .ragulivna__swiper {
@@ -708,6 +800,14 @@ h2 {
   overflow: hidden;
   max-height: 450px;
   height: 100%;
+}
+
+@media screen and (max-width: 600px) {
+  .ragulivna__swiper {
+    margin: 0;
+    max-width: 100%;
+    padding-top: 2rem;
+  }
 }
 
 .ragulivna__swiper img {
