--- a/style.scss
+++ b/style.scss
@@ -623,3 +623,65 @@ h2 {
 #end .decorative-letter{
   vertical-align: 20px;
 }
+
+
+ a {
+  position: relative;
+      display: inline-block;
+    text-decoration: none;
+    color: blue;
+    font-weight: 800;
+    padding: 0 1px;
+    font-style: italic;
+}
+ a:after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  width: 0%;
+  content: '.';
+  color: transparent;
+  background: #aaa;
+  height: 1px;
+}
+
+
+ a {
+  transition: all 2s;
+}
+
+ a:after {
+  text-align: left;
+  content: '.';
+  margin: 0;
+  opacity: 0;
+}
+ a:hover {
+  color: #fff;
+  z-index: 1;
+}
+ a:hover:after {
+  z-index: -10;
+  animation: fill 1s forwards;
+  -webkit-animation: fill 1s forwards;
+  -moz-animation: fill 1s forwards;
+  opacity: 1;
+}
+
+@-webkit-keyframes fill {
+  0% {
+    width: 0%;
+    height: 1px;
+  }
+  50% {
+    width: 100%;
+    height: 1px;
+  }
+  100% {
+    width: 100%;
+    height: 100%;
+    background: #333;
+  }
+}
